# rookworld-trl

./: .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENTS_2025-09-01_LOG.md  EXPERIMENTS_2025-09-02_LOG.md  EXPERIMENTS_2025-09-03_LOG.md  EXPERIMENTS_2025-09-04_LOG.md  EXPERIMENTS_2025-09-18_LOG.md  EXPERIMENTS_2025-09-19_LOG.md  EXPERIMENTS_2025-09-20_LOG.md  FOCUSED_SWEEP_ANALYSIS.md  LICENSE  MANUAL_DEBUG_EVAL_FIX.md  MANUAL_GRPO_DEBUG_ANALYSIS.md  MANUAL_GRPO_DEBUG_ANALYSIS_2025-09-02.md  PROMPTING_GUIDE.md  README.md  TENSOR_RESHAPE_BUG_ISSUE.md  analyze_eval_errors.py  analyze_eval_metrics.py  analyze_output_patterns.py  analyze_sweep_results.py  analyze_training_progression.py  create_opening_dataset.py  debug_eval.py  evaluate_checkpoint.py  evaluate_checkpoint_exact.py  exact_match_eval_results.json  example.py  manual_grpo_comprehensive_analysis.md  manual_grpo_debug.py  manual_grpo_technical_analysis.md  opening_dataset.json  opening_dataset_eval.json  opening_dataset_train.json  problem_opening_dataset.json  pyproject.toml  test_baseline_and_split.py  test_eval_extraction.py  test_exact_match_eval.py  (+6 more)
grpo_output_250902_1041/runs/: events.out.tfevents.1756802486.BlueBlack.5145.0
scripts/: check_capacity.py  launch_focused_sweep.sh  launch_sweep.sh  run_a_task_epoch.sh  run_beta_warmup_eval.py  run_random_sweep.py
src/rookworld_trl/: __init__.py  dataset.py  inspect.py  rewards.py  train.py  train_a.py  utils.py
